--- a/HELP/index.html
+++ b/HELP/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- DEBUT INTEGRATION LIENS CSS - VOTRE SECTION -->
+
+  <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
+
   <style>
 
     /*
