--- a/HELP/index.html
+++ b/HELP/index.html
@@ -138,6 +138,11 @@
     #############################################
     */
 
+    :root {
+      --primary-color: #1e90ff;
+      --white: #ffffff;
+    }
+    
     /*
     #############################################
           FIN STYLE CONTENU - VOTRE SECTION
