UPDATE CSS + NAVBAR

--- a/HELP/index.html
+++ b/HELP/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- DEBUT LIENS CSS NAVBAR - NE PAS TOUCHER -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="css/style.css">
   <!-- FIN LIENS CSS NAVBAR - NE PAS TOUCHER -->
 
@@ -22,11 +22,12 @@
 
   <div id="top-bar">
     <div class="navbar">
+    <a> <img src="icone/icone_site.svg" alt="logo site"> </a>
     <a href="#home">My Network</a>
     <a href="#news">Solutions</a>
     <div class="dropdown">
       <button class="dropbtn">Regions
-        <i class="fa fa-caret-down"></i>
+        <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
       </button>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
@@ -36,7 +37,7 @@
     </div>
       <div class="dropdown">
         <button class="dropbtn">Locations
-          <i class="fa fa-caret-down"></i>
+          <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
         </button>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
