feat: new AZIL page too pretty uwu

--- a/AZIL/index.html
+++ b/AZIL/index.html
@@ -1,12 +1,63 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>WebdevAzilS6</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.7554bb003b904213.js" type="module"></script><script src="polyfills.aced591de8286bac.js" type="module"></script><script src="main.58609f92be72ec5e.js" type="module"></script>
 
-</body></html>
+<!DOCTYPE html>
+<html lang="fr" data-critters-container>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- DEBUT LIENS CSS NAVBAR - NE PAS TOUCHER -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- FIN LIENS CSS NAVBAR - NE PAS TOUCHER -->
+
+    <!-- DEBUT INTEGRATION LIENS CSS - VOTRE SECTION -->
+
+    <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
+
+  <style>:root{--primary-color:#012c10;--light-grey:#F4F4F4;--white:#ffffff;--primary-font:Inter, sans-serif;--text-color:#000000;--header-color:#CFA40B;--orange:#F16E00;--active:#3DE35A;--degraded:#FFCD0B;--inactive:#E70002}body{font-family:var(--primary-font);margin:0;padding:0}#top-bar{background-color:var(--primary-color);color:var(--white);padding:10px 20px;display:flex;justify-content:space-between;align-items:center}#bottom-bar{padding:10px 20px;font-size:14px;display:flex;align-items:center;background-color:var(--light-grey)}@media screen and (min-width: 400px){#content{display:flex;margin-left:3%}}.navbar{overflow:hidden}.navbar a{float:left;font-size:16px;color:var(--white);text-align:center;padding:14px 16px;text-decoration:none}.dropdown{float:left;overflow:hidden}.dropdown .dropbtn{font-size:16px;border:none;outline:none;color:var(--white);padding:14px 16px;background-color:inherit;font-family:inherit;margin:0}.navbar a:hover,.dropdown:hover .dropbtn{background-color:var(--orange);color:#000}.dropdown-content{display:none;position:absolute;background-color:var(--light-grey);min-width:160px;box-shadow:0 8px 16px #0003;z-index:1}.dropdown-content a{float:none;color:var(--text-color);padding:12px 16px;text-decoration:none;display:block;text-align:left}.dropdown-content a:hover{background-color:#ddd}.dropdown:hover .dropdown-content{display:block}.fa-caret-down{color:var(--orange)}.dropdown:hover .fa-caret-down{color:var(--text-color)}body{font-family:var(--primary-font)}</style><link rel="stylesheet" href="styles.b1ac80e837b12c0f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b1ac80e837b12c0f.css"></noscript></head>
+  <body>
+  <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
+
+  <header>
+    <div id="top-bar">
+      <div class="navbar">
+        <a href="#home">My Network</a>
+        <a href="#news">Solutions</a>
+        <div class="dropdown">
+          <button class="dropbtn">Regions
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Locations
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="bottom-bar">
+      <p> Home   >   Networking   >   Flexible </p>
+    </div>
+  </header>
+
+  <!-- FIN HTML NAVBAR - PAS TOUCHER -->
+
+  <div id="content">
+    <!-- DEBUT HTML CONTENU - VOTRE SECTION -->
+    <app-root></app-root>
+    <!-- FIN HTML CONTENU - VOTRE SECTION -->
+  </div>
+  <script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.0b9e73b8c38c3ba2.js" type="module"></script></body>
+</html>
