POKE : Add paginer

--- a/POKE/index.html
+++ b/POKE/index.html
@@ -216,8 +216,8 @@
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <div class="select">
+                <div class="table-navigation">
+                    <div class="select-entries">
                         <select>
                             <option value="10">Show 10 entries</option>
                             <option value="25">Show 25 entries</option>
@@ -225,8 +225,15 @@
                             <option value="100">Show 100 entries</option>
                         </select>
                     </div>
-                    <div>Entrées</div> <!-- nombre d'entrées-->
-                    <div>1 2 3 4</div> <!-- paginer-->
+                    <div class="pager">
+                        <a href="#"><img src="../HELP/icone/fleche_horizontale_g.svg" alt=""></a>
+                        <a href="#">1</a>
+                        <a href="#">2</a>
+                        <a href="#">3</a>
+                        <a>...</a>
+                        <a href="#">30</a>
+                        <a href="#"><img src="../HELP/icone/fleche_horizontale.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
