--- a/RAND/regions_details.html
+++ b/RAND/regions_details.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,49 +15,50 @@
     <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
 
 </head>
+
 <body>
 
-<!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
+    <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
 
-<header>
+    <header>
 
-    <div id="top-bar">
-        <div class="navbar">
-            <a href="#home">My Network</a>
-            <a href="#news">Solutions</a>
-            <div class="dropdown">
-                <button class="dropbtn">Regions
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+        <div id="top-bar">
+            <div class="navbar">
+                <a href="#home">My Network</a>
+                <a href="#news">Solutions</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Regions
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Locations
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Locations
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
 
-    <div id="bottom-bar">
-        <p> Home   >   Networking   >   Flexible   >   Region Name </p>
-    </div>
-</header>
+        <div id="bottom-bar">
+            <p> Home > Networking > Flexible > Region Name </p>
+        </div>
+    </header>
 
-<!-- FIN HTML NAVBAR - PAS TOUCHER -->
+    <!-- FIN HTML NAVBAR - PAS TOUCHER -->
 
-<div id="content">
-    <!-- DEBUT HTML CONTENU - VOTRE SECTION -->
+    <div id="content">
+        <!-- DEBUT HTML CONTENU - VOTRE SECTION -->
         <div class="page">
             <!-- Contenu de la page ici -->
             <div id="header">
@@ -148,10 +150,14 @@
             </div>
             <dl id="region_description">
                 <dt>Description: </dt>
-                <dd id="region_description_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit, ante a malesuada eleifend, ligula urna vestibulum purus,
-                    nec mattis nunc est eget lacus. Donec congue arcu velit, ac fermentum eros finibus facilisis. Curabitur nec est eleifend, laoreet
-                    mi sit amet, hendrerit enim. Quisque consequat aliquet aliquet. Nullam pretium suscipit risus, id porttitor mi dictum quis.
-                    Quisque id porttitor leo. Praesent sit amet lacus eu tellus vulputate feugiat. Etiam at pharetra massa. Ut augue lectus, molestie
+                <dd id="region_description_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit,
+                    ante a malesuada eleifend, ligula urna vestibulum purus,
+                    nec mattis nunc est eget lacus. Donec congue arcu velit, ac fermentum eros finibus facilisis.
+                    Curabitur nec est eleifend, laoreet
+                    mi sit amet, hendrerit enim. Quisque consequat aliquet aliquet. Nullam pretium suscipit risus, id
+                    porttitor mi dictum quis.
+                    Quisque id porttitor leo. Praesent sit amet lacus eu tellus vulputate feugiat. Etiam at pharetra
+                    massa. Ut augue lectus, molestie
                     vitae ante in, mollis feugiat ligula. Fusce hendrerit dolor id pretium feugiat</dd>
             </dl>
             <div id="region_info_values_wrapper">
@@ -229,17 +235,25 @@
                 </div>
             </div>
             <div id="inventory_navbar_wrapper">
-                <div id="gateway_navbar">
-                    Gateways
-                </div>
-                <div id="sites_navbar">
-                    Sites
-                </div>
-                <div id="edges_navbar">
-                    Edges
-                </div>
-                <div id="map_navbar">
-                    Map
+                <div id="navbar">
+                    <ul>
+                        <li>
+                            <a id="gateways">Gateways</a>
+                            <div class="line_select"></div>
+                        </li>
+                        <li>
+                            <a id="sites">Sites</a>
+                            <div class="line_select"></div>
+                        </li>
+                        <li>
+                            <a id="edges">Edges</a>
+                            <div class="line_select"></div>
+                        </li>
+                        <li>
+                            <a id="map">Map</a>
+                            <div class="line_select"></div>
+                        </li>
+                    </ul>
                 </div>
                 <input id="search_navbar" placeholder="Search for a product, resour...">
                 <img src="../HELP/icone/loupe.svg" alt="loupe">
@@ -324,8 +338,10 @@
 
 
         </div>
-    <!-- FIN HTML CONTENU - VOTRE SECTION -->
-</div>
+        <!-- FIN HTML CONTENU - VOTRE SECTION -->
+    </div>
 
 </body>
+<script src="JS/region_details.js"></script>
+
 </html>
