POKE : Début responsive mobile

--- a/POKE/index.html
+++ b/POKE/index.html
@@ -22,15 +22,17 @@
 
     <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
 
+
     <header>
 
         <div id="top-bar">
             <div class="navbar">
+                <a> <img src="../HELP/icone/icone_site.svg" alt="logo site"> </a>
                 <a href="#home">My Network</a>
                 <a href="#news">Solutions</a>
                 <div class="dropdown">
                     <button class="dropbtn">Regions
-                        <i class="fa fa-caret-down"></i>
+                        <img src="../HELP/icone/fleche_verticale.svg"></i>
                     </button>
                     <div class="dropdown-content">
                         <a href="#">Link 1</a>
@@ -40,7 +42,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">Locations
-                        <i class="fa fa-caret-down"></i>
+                        <img src="../HELP/icone/fleche_verticale.svg"></i>
                     </button>
                     <div class="dropdown-content">
                         <a href="#">Link 1</a>
